Can do manual resilience test.

--- a/Store/appsettings.json
+++ b/Store/appsettings.json
@@ -8,5 +8,5 @@
   "AllowedHosts": "*",
   "ProductEndpoint": "http://localhost:5228",
   "ProductEndpointHttps": "https://localhost:7130",
-  "ImagePrefix": "http://localhost:5228/images"
+  "ImagePrefix": "https://fluffy-potato-7rrr97r67j9hjgp-5228.app.github.dev/images"
 }
