--- a/Store/Store.csproj
+++ b/Store/Store.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\DataEntities\DataEntities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.0.0-rc.1.23453.1" />
+  </ItemGroup>
+
 </Project>
