--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,5 +9,10 @@ RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get update \
     && apt-get install -y xdg-utils \
     && curl -fsSL https://aka.ms/install-azd.sh | bash \
+    && curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.28/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg \
+    && apt-get update \
     && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get install -y kubectl \
+    && rm -rf /var/lib/apt/lists/* \
+    && curl -L https://github.com/kubernetes/kompose/releases/download/v1.31.0/kompose-linux-amd64 -o kompose \
+    && chmod +x kompose
