Changing to minikube

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,14 +17,15 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-vscode.vscode-node-azure-pack",
-                "github.vscode-github-actions",
-                "GitHub.copilot-nightly",
-                "GitHub.vscode-github-actions",
-                "ms-dotnettools.vscode-dotnet-runtime",
-		"ms-dotnettools.csdevkit",
-                "ms-dotnetools.csharp"
-            ]
+				"ms-vscode.vscode-node-azure-pack",
+				"github.vscode-github-actions",
+				"GitHub.copilot-nightly",
+				"GitHub.vscode-github-actions",
+				"ms-dotnettools.vscode-dotnet-runtime",
+				"ms-dotnettools.csdevkit",
+				"ms-dotnetools.csharp",
+				"ms-kubernetes-tools.vscode-kubernetes-tools"
+			]
         }
     },
     "forwardPorts": [
