--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: DockerfileStore
     environment: 
       - ProductEndpoint=http://backend:8080
-      - ImagePrefix=https://localhost/images
+      - ImagePrefix=https://glowing-sniffle-vgggvpg9vpjhpj66-5200.app.github.dev/images
     ports:
       - "5902:8080"
     depends_on: 
